# crp

./: .gitignore  CMakeLists.txt  README.md  a.out
benchmarks/: CMakeLists.txt
benchmarks/hash/: sha256.cpp
include/crp/: align.hpp  sha256.hpp  simd.hpp  utils.hpp
src/hash/: sha256.cpp
tests/: CMakeLists.txt
tests/hash/: sha256.cpp
